# hpi-personal-overlay

./: .gitmodules  README.org  mypy.ini  pyproject.toml  ruff.toml  setup.py  test  tests.py  tox.ini
.github/workflows/: main.yml
src/my/: ping_overlay.py
src/my/body/exercise/: common.py  manual.py  orgmode.py  parser.py  specs.py  taplog.py
src/my/body/sleep/: common.py  manual.py  sleepiness.py
src/my/calendar/: holidays.py
src/my/reddit/: rexport_misc.py
src/my/tests/: __init__.py  reddit.py
src/my/twitter/: all.py
src/my/util/: hpi_heartbeat.py
src/my/youtube/: takeout.py
