# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "HPI-overlay"
dependencies = [
]
requires-python = ">=3.10"

## these need to be set if you're planning to upload to pypi
# description = "TODO"
# license = {file = "LICENSE"}
# authors = [
#     {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
# ]
# maintainers = [
#     {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
# ]
#
# [project.urls]
# Homepage = "https://github.com/karlicoss/pymplate"
##


[project.optional-dependencies]
optional = []

[dependency-groups]
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml",  # for mypy html coverage
]
# TODO not sure if should be optional dependency instead?
hpi = [
    "hpi",
]



# workaround for error during uv publishing
# see https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/my"]

[tool.hatch.version]
source = "vcs"
