# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "HPI-overlay"
dependencies = [
    "hpi",
]
requires-python = ">=3.12"

## these need to be set if you're planning to upload to pypi
# description = "TODO"
# license = {file = "LICENSE"}
# authors = [
#     {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
# ]
# maintainers = [
#     {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
# ]
#
# [project.urls]
# Homepage = "https://github.com/karlicoss/pymplate"
##


[project.optional-dependencies]
optional = [
    "colorlog",
]

[dependency-groups]
testing = [
    "pytest>=9",  # need version 9 for proper namespace package support
    "ruff",

    "orgparse",
    "HPI-overlay[optional]",
]
typecheck = [
    { include-group = "testing" },
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.7",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/my"]

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
# NOTE: seems like this impacts dependencies and optional dependencies her
#   , but not dependency groups or deps = inside tox? weird.
hpi = { git = "https://github.com/karlicoss/HPI" }
